# SISP

./: .gitignore  AI_CONTEXT.md  ARCHITECTURE.md  HOW_SVD_Works.md  INDEX.md  INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  STRUCTURE.pmd  ingest.py  inspect_channel_artifacts.py  mathsignal.txt  preprocess.py  python_satellite_sim.py  python_satellite_sim_v2.py  requirements.txt  sisp_svd_anomaly.py  svd_pipeline.py  test_basic_no_cascade.py  test_kalman_gaussian_3sat.py
.claude/: settings.local.json
.streamlit/: config.toml
all_tests/: run_cpp_tests.ps1  run_demo_paper_logs.ps1  run_python_tests.ps1  test_borrow_addressing_flow.py  test_correction_propagation.py  test_dataset_algorithm_comparison.py  test_dual_phy_437.py  test_full_message_propagation_sensor_correction.py  test_integration_matrix_it02_it03_it05_it06.py  test_kalman_gaussian_3sat.py  (+3 more)
c++ implemnetation/: CMakeLists.txt
c++ implemnetation/build_cmake_tools/: CMakeCache.txt
c++ implemnetation/build_ninja/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake
c++ implemnetation/docs/: CORRECTION_ALGORITHM_COMPARATIVE.md  SIGNAL_TESTING_SIMULATION_ROADMAP.md  STATE_MACHINE_COMPLETE_EXPLANATION.md  TESTING_ARCHITECTURE.md  protocol_code_review.md
c++ implemnetation/include/: sim_hooks.hpp  sisp_correction.hpp  sisp_decoder.hpp  sisp_degr.hpp  sisp_encoder.hpp  sisp_protocol.hpp  sisp_state_machine.hpp
c++ implemnetation/src/: sim_hooks.cpp  sisp_correction.cpp  sisp_decoder.cpp  sisp_degr.cpp  sisp_encoder.cpp  sisp_protocol.cpp  sisp_state_machine.cpp
c++ implemnetation/tests/: test_comprehensive_matrix.cpp  test_degr.cpp  test_encode_decode.cpp  test_frame_pipeline.cpp  test_main.cpp  test_payload_codec.cpp  test_protocol_simulation.cpp  test_state_machine.cpp
(+120 files in other folders)
